--- a/main.css
+++ b/main.css
@@ -3,7 +3,8 @@
     width: 20vw;
     border: 1px solid black;
     padding: 5px;
-    float:left;
+    display:flex;
+    margin-bottom: 10px;
 }
 
 #currentHub {
@@ -22,11 +23,20 @@
     margin-left: 50px;
 }
 
+#currentDetails {
+    height: 45vh;
+    width: 20vw;
+    border: 1px solid black;
+    margin-top: 10px;
+    padding: 5px;
+}
+
 .hubButton {
     border: 1px solid black;
     background-color: skyblue;
     width: 8vw;
     text-align:center;
+    cursor: pointer;
 }
 
 
@@ -41,6 +51,12 @@ table {
 .tableBorder td {
     padding: 10px;
     width: 300px;
+}
+
+.entrance {
+    font-weight: bold;
+    background-color: lightgreen;
+    cursor: pointer;
 }
 
 .deadEnd {
