--- a/main.css
+++ b/main.css
@@ -1,10 +1,26 @@
 ﻿#hubSelector {
-    height: 20vh;
-    width: 20vw;
-    border: 1px solid black;
+    height: 30vh;
+    width: 25vw;
     padding: 5px;
-    display:flex;
+    display: flex;
     margin-bottom: 10px;
+}
+
+#hubSelectContainer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.hubButton {
+    border: 1px solid black;
+    background-color: skyblue;
+    width: 7vw;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 5px;
 }
 
 #currentHubImage {
@@ -12,19 +28,22 @@
     padding: 5px;
 }
 
+
+
+
+#currentContainer {
+    /*border: 1px solid black;*/
+    margin-left: 20px;
+}
+
 #currentHub {
-    height: 70vh;
-    width: 20vw;
+    min-height: 70vh;
+    width: 30vw;
     padding:5px;
     margin-left: 10px;
     float:left;
 }
 
-#currentContainer {
-    border: 1px solid black;
-    height: 70vh;
-    margin-left: 20px;
-}
 
 #currentDetails {
     height: 45vh;
@@ -36,19 +55,26 @@
 }
 
 #gridContainer {
-    height: 70vh;
     width: 200px;
+    max-height: 70vh;
     margin-left: 20px;
-    border: 1px solid black;
 }
 
-.hubButton {
-    border: 1px solid black;
-    background-color: skyblue;
-    width: 8vw;
-    text-align:center;
-    cursor: pointer;
+#gridWrapper {
+    display: grid;
+    width: inherit;
+    grid-template-columns: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
+    border-top: 1px solid black;
+    border-left: 1px solid black;
 }
+
+.gridSquare {
+    width: 19px;
+    height: 19px;
+    border-bottom: 1px solid black;
+    border-right: 1px solid black;
+}
+
 
 
 table {
@@ -57,6 +83,7 @@ table {
 
 .tableBorder tr {
     border: 1px solid black;
+    height: 35px;
 }
 
 .tableBorder td {
@@ -89,10 +116,3 @@ table {
     cursor: pointer;
 }
 
-.gridSquare {
-    width: 20px;
-    height: 20px;
-    border-bottom: 1px solid black;
-    border-right: 1px solid black;
-    display:inline-block;
-}
