--- a/main.css
+++ b/main.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 5px;
+    font-size: 14px;
 }
 
 #currentHubImage {
@@ -106,7 +107,7 @@ table {
 }
 
 .emptyRow {
-    height: 15px !important;
+    height: 13px !important;
 }
 
 .blockageLabel {
