--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 ﻿#hubSelector {
-    height: 32vh;
     width: 25vw;
     padding: 5px;
     display: flex;
@@ -19,18 +18,15 @@
     text-align: center;
     cursor: pointer;
     display: flex;
-    flex-wrap: wrap;
     padding: 5px;
-    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #currentHubImage {
     margin-top: 10px;
     padding: 5px;
 }
-
-
-
 
 #currentContainer {
     margin-left: 20px;
@@ -104,6 +100,10 @@ table {
     font-weight: bold;
     background-color: lightgreen;
     cursor: pointer;
+}
+
+.destination {
+    cursor: alias;
 }
 
 .emptyRow {
